--- a/CV/index.html
+++ b/CV/index.html
@@ -180,7 +180,7 @@
   <article>
     <p>Please follow the download link below for a recent <code class="language-plaintext highlighter-rouge">.pdf</code> version of my academic CV below.</p>
 
-<p><a href="http://localhost:4000/downloads/CV_K_Schroer_WEBSITE.pdf"><code class="language-plaintext highlighter-rouge">Karsten Schroer's Academic CV</code></a></p>
+<p><a href="https://karstenschroer.github.io/downloads/CV_K_Schroer_WEBSITE.pdf" target="_blank" rel="noopener noreferrer"><code class="language-plaintext highlighter-rouge">Karsten Schroer's Academic CV</code></a></p>
 
 <p><strong>(Last updated: December, 2021)</strong></p>
 
