--- a/CV/index.html
+++ b/CV/index.html
@@ -178,7 +178,7 @@
   </header>
 
   <article>
-    <p>Please follow the download link below for a recent <code class="language-plaintext highlighter-rouge">.pdf</code> version of my academic CV below.</p>
+    <p>Please follow the download link below for a recent <code class="language-plaintext highlighter-rouge">.pdf</code> version of my academic CV.</p>
 
 <p><a href="https://karstenschroer.github.io/downloads/CV_K_Schroer_WEBSITE.pdf" target="_blank" rel="noopener noreferrer"><code class="language-plaintext highlighter-rouge">Karsten Schroer's Academic CV</code></a></p>
 
