--- a/CV/index.html
+++ b/CV/index.html
@@ -59,7 +59,7 @@
     <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
     <div class="container">
 
-      <a class="navbar-brand title font-weight-lighter" href="https://karstenschroer.github.io/">
+      <a class="navbar-brand title font-weight-lighter" href="http://karstenschroer.github.io/">
        <span class="font-weight-bold">Karsten</span>   Schroer
       </a>
 
