--- a/index.html
+++ b/index.html
@@ -43,15 +43,14 @@
 <script src="/assets/js/theme.js"></script>
 <script src="/assets/js/dark_mode.js"></script>
 
-<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SH5ZN16NJR"></script>
 <script>
-(function(i,s,o,g,r,a,m){i[‘GoogleAnalyticsObject’]=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,"script","https://www.google-analytics.com/analytics.js","ga");
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-ga("create", "G-SH5ZN16NJR", "auto");
-ga("send", "pageview");
+  gtag('config', 'G-SH5ZN16NJR');
 </script>
 
 
